Closed
Bug 415016
Opened 15 years ago
Closed 15 years ago
Default comment is submitted by Linux crash reporter
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wildmyron, Assigned: timeless)
References
Details
Attachments
(1 file, 1 obsolete file)
1.44 KB,
patch
|
ted
:
review+
ted
:
approval1.9+
|
Details | Diff | Splinter Review |
I haven't actually used the Linux crash reporter but I'm seeing "Add a comment. Note: Comments are publicly visible" in the comments field on http://crash-stats.mozilla.com/ for quite a few Linux crash reports. Eg: bp-6bd2f363-cf63-11dc-b5a7-001a4bd43ed6 bp-aaa8494a-cf61-11dc-b545-001a4bd43ed6 bp-2a7e6735-cf95-11dc-b3ab-001a4bd46e84
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #309959 -
Flags: review?(ted.mielczarek)
Comment 2•15 years ago
|
||
Comment on attachment 309959 [details] [diff] [review] guess Tested this and it fixes the problem. Pretty stupid thing to miss! Could you make a similar change in the EmailChanged function?
Attachment #309959 -
Flags: review?(ted.mielczarek) → review+
Comment 3•15 years ago
|
||
Note that the steps to reproduce here are: focus the comment textfield, unfocus it.
Attachment #309959 -
Attachment is obsolete: true
Attachment #309967 -
Flags: review?(ted.mielczarek)
Comment 5•15 years ago
|
||
Comment on attachment 309967 [details] [diff] [review] email too r+a=me, and I'll check this in. (Full service review!)
Attachment #309967 -
Flags: review?(ted.mielczarek)
Attachment #309967 -
Flags: review+
Attachment #309967 -
Flags: approval1.9+
Comment 6•15 years ago
|
||
Checking in toolkit/crashreporter/client/crashreporter_linux.cpp; /cvsroot/mozilla/toolkit/crashreporter/client/crashreporter_linux.cpp,v <-- crashreporter_linux.cpp new revision: 1.17; previous revision: 1.16 done
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•