bug 415016 - default comment is submitted by Linux crash reporter. patch by timeless, r+a=me